[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Ryan McGregor", email = "ryanmcgr@protonmail.com"},
]
dependencies = [
    "ipython~=7.30",
]
requires-python = ">=3.10"
license = {text = "GPLv3"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
